--- a/BangazonWorkforceManagement/Views/Shared/_Layout.cshtml
+++ b/BangazonWorkforceManagement/Views/Shared/_Layout.cshtml
@@ -37,6 +37,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TrainingPrograms" asp-action="Index">Training Programs</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Computers" asp-action="Index">Computers</a>
+                        </li>
                     </ul>
                 </div>
             </div>
