Conditionally render delete button

--- a/BangazonWorkforceManagement/Views/TrainingPrograms/Index.cshtml
+++ b/BangazonWorkforceManagement/Views/TrainingPrograms/Index.cshtml
@@ -51,7 +51,7 @@
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
                 @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id  })
+                @if (item.IsCancelable) { @Html.ActionLink("Delete", "Delete", new { id = item.Id }); }
             </td>
         </tr>
 }
