--- a/BangazonWorkforceManagement/Views/Departments/Details.cshtml
+++ b/BangazonWorkforceManagement/Views/Departments/Details.cshtml
@@ -16,7 +16,7 @@
             @Html.DisplayNameFor(model => model.Budget)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Budget)
+            $@Html.DisplayFor(model => model.Budget)
         </dd>
     </dl>
 </div>
