--- a/BangazonWorkforceManagement/Views/Departments/Index.cshtml
+++ b/BangazonWorkforceManagement/Views/Departments/Index.cshtml
@@ -37,7 +37,7 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Budget)
+                $@Html.DisplayFor(modelItem => item.Budget)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.DepartmentSize)
