--- a/BangazonWorkforceManagement/Views/Computers/Create.cshtml
+++ b/BangazonWorkforceManagement/Views/Computers/Create.cshtml
@@ -21,6 +21,11 @@
                 <input asp-for="Computer.Manufacturer" class="form-control" />
                 <span asp-validation-for="Computer.Manufacturer" class="text-danger"></span>
             </div>
+            <div class="form-group">
+                <label asp-for="Computer.PurchaseDate" class="control-label"></label>
+                <input asp-for="Computer.PurchaseDate" type="date" class="form-control hasDatepicker" />
+                <span asp-validation-for="Computer.PurchaseDate" class="text-danger"></span>
+            </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
