--- a/BangazonWorkforceManagement/Views/Employees/Index.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Index.cshtml
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.Department.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.IsSupervisor)
+                @Html.CheckBoxFor(modelItem => item.IsSupervisor)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
