Completed GET for Assign training

--- a/BangazonWorkforceManagement/Views/Employees/Details.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Details.cshtml
@@ -62,7 +62,9 @@
 </tbody>
 <dl class="row">
     <dt class="col-sm-2">
-        @Html.DisplayNameFor(model => model.Trainings)
+        @Html.DisplayNameFor(model => model.Trainings) | 
+
+        @Html.ActionLink("Assign Training", "Assign", new { id = Model.Id })
     </dt>
     <dd class="col-sm-10">
         @Html.DisplayFor(model => model.Trainings.Count)
