--- a/BangazonWorkforceManagement/Views/Employees/Assign.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Assign.cshtml
@@ -12,8 +12,8 @@
         <form asp-action="Assign">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="TrainingId" class="control-label"></label>
-                <select asp-for="TrainingId" asp-items="@Model.TrainingOptions"></select>
+                <label asp-for="TrainingProgramId" class="control-label"></label>
+                <select asp-for="TrainingProgramId" asp-items="@Model.TrainingOptions"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Assign" class="btn btn-primary" />
