can now edit employees, minus their computers

--- a/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model BangazonWorkforceManagement.Models.ViewModels.EmployeeCreateViewModel
+﻿@model BangazonWorkforceManagement.Models.ViewModels.EmployeeEditViewModel
 
 @{
     ViewData["Title"] = "Edit";
@@ -11,7 +11,7 @@
 <div class="row">
     <div class="row">
         <div class="col-md-4">
-            <form asp-action="Create">
+            <form asp-action="Edit">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                 <div class="form-group">
                     <label asp-for="Employee.FirstName" class="control-label"></label>
@@ -32,9 +32,13 @@
                     <label asp-for="Departments" class="control-label"></label>
                     <select asp-for="Employee.DepartmentId" asp-items="@Model.Departments"></select>
                 </div>
-                
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <label asp-for="Computers" class="control-label"></label>
+                    <select asp-for="Employee.Computers" asp-items="@Model.Computers"></select>
+                </div>
+
+                <div class="form-group">
+                    <input type="submit" value="Update" class="btn btn-primary" />
                 </div>
             </form>
         </div>
