--- a/BangazonWorkforceManagement/Views/Computers/Create.cshtml
+++ b/BangazonWorkforceManagement/Views/Computers/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model BangazonWorkforceManagement.Models.ComputersEmployeeViewModel
+﻿@model BangazonWorkforceManagement.Models.ComputerEmployeeViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -25,6 +25,10 @@
                 <label asp-for="Computer.PurchaseDate" class="control-label"></label>
                 <input asp-for="Computer.PurchaseDate" type="date" class="form-control hasDatepicker" />
                 <span asp-validation-for="Computer.PurchaseDate" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Employees" class="control-label"></label>
+                <select asp-for="EmployeeId" asp-items="@Model.Employees"></select>
             </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
