--- a/BangazonWorkforceManagement/Views/TrainingPrograms/Archive.cshtml
+++ b/BangazonWorkforceManagement/Views/TrainingPrograms/Archive.cshtml
@@ -49,7 +49,7 @@
                 @Html.DisplayFor(modelItem => item.MaxAttendees)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Details", "Details", new { id=item.Id })
             </td>
         </tr>
 }
