--- a/BangazonWorkforceManagement/Views/TrainingPrograms/Edit.cshtml
+++ b/BangazonWorkforceManagement/Views/TrainingPrograms/Edit.cshtml
@@ -19,23 +19,18 @@
             </div>
             <div class="form-group">
                 <label asp-for="StartDate" class="control-label"></label>
-                <input asp-for="StartDate" class="form-control" />
+                <input asp-for="StartDate" type="date" class="form-control" />
                 <span asp-validation-for="StartDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="EndDate" class="control-label"></label>
-                <input asp-for="EndDate" class="form-control" />
+                <input asp-for="EndDate" type="date" class="form-control" />
                 <span asp-validation-for="EndDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="MaxAttendees" class="control-label"></label>
                 <input asp-for="MaxAttendees" class="form-control" />
                 <span asp-validation-for="MaxAttendees" class="text-danger"></span>
-            </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="IsCancelable" /> @Html.DisplayNameFor(model => model.IsCancelable)
-                </label>
             </div>
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
