--- a/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
@@ -34,7 +34,7 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Computers" class="control-label"></label>
-                    <select asp-for="Employee.Computers" asp-items="@Model.Computers"></select>
+                    <select asp-for="Employee.Computers" asp-items="@Model.Computers" multiple></select>
                 </div>
 
                 <div class="form-group">
