--- a/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
@@ -34,12 +34,17 @@
                 </div>
                 <div class="form-group">
                     <label asp-for="Computers" class="control-label"></label>
-                    <select asp-for="Employee.Computers" asp-items="@Model.Computers" multiple></select>
+                    <select asp-for="Employee.Computers" asp-items="@Model.Computers"></select>
                 </div>
+                <tr>
+                    <td>
+                        @Html.ListBoxFor(Model => Model.Computers)
+                    </td>
+                 </tr>
 
-                <div class="form-group">
-                    <input type="submit" value="Update" class="btn btn-primary" />
-                </div>
+                    <div class="form-group">
+                        <input type="submit" value="Update" class="btn btn-primary" />
+                    </div>
             </form>
         </div>
     </div>
