--- a/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
+++ b/BangazonWorkforceManagement/Views/Employees/Edit.cshtml
@@ -32,19 +32,19 @@
                     <label asp-for="Departments" class="control-label"></label>
                     <select asp-for="Employee.DepartmentId" asp-items="@Model.Departments"></select>
                 </div>
-                <div class="form-group">
+                @*<div class="form-group">
                     <label asp-for="Computers" class="control-label"></label>
                     <select asp-for="Employee.Computers" asp-items="@Model.Computers"></select>
                 </div>
-                <tr>
-                    <td>
-                        @Html.ListBoxFor(Model => Model.Computers)
-                    </td>
-                 </tr>
+                <tr>*@
+           <td>
+               @Html.ListBoxFor(Model => Model.CompIds, Model.Comps, new { @class = "form-control"})
+           </td>
+        </tr>
 
-                    <div class="form-group">
-                        <input type="submit" value="Update" class="btn btn-primary" />
-                    </div>
+                <div class="form-group">
+                    <input type="submit" value="Update" class="btn btn-primary" />
+                </div>
             </form>
         </div>
     </div>
