--- a/BangazonWorkforceManagement/Views/Computers/Index.cshtml
+++ b/BangazonWorkforceManagement/Views/Computers/Index.cshtml
@@ -49,11 +49,11 @@
                 @Html.DisplayFor(modelItem => item.Manufacturer)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id}) |
                 @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new {  id=item.Id})
-            </td>
-        </tr>
+                @if (item.Employee == null) { @Html.ActionLink("Delete", "Delete", new {  id=item.Id   }) } 
+               </td>
+   
+           </tr>
 }
     </tbody>
 </table>
